# ParsMailLog

./: README.md  const.py  constants.py  database.py  db_test.py  mail_log_class.py  maillogclass.py  main.py  parse_log.py  pyproject.toml
backend/: constants.py  database.py  mail_log_class.py  parse_log.py
sql/: database.py  database_func.py  models.py
templates/: index.html  table.html
